welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var b:Int=0
while (sortieTrouvee()==false) {
  b=0

while (crossing()==false) {avance(); if (estSurBiscuit()) {b=b+1}}
  if (b<3) {droite()}
  else {gauche()}
